feat: add jenkins and remove gitbeaker

--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "test:cov": "jest --coverage"
   },
   "dependencies": {
-    "@gitbeaker/node": "^28.0.1",
     "@nestjs/common": "^7.0.0",
     "@nestjs/config": "^0.5.0",
     "@nestjs/core": "^7.0.0",
@@ -34,6 +33,7 @@
     "express-session": "^1.17.1",
     "express-winston": "^4.0.3",
     "http-proxy-middleware": "^1.0.4",
+    "jenkins-api": "^0.3.1",
     "nunjucks": "^3.2.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
