--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "test:cov": "jest --coverage"
   },
   "dependencies": {
+    "@gem-mine/request": "^1.3.1",
     "@nestjs/common": "^7.0.0",
     "@nestjs/config": "^0.5.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/serve-static": "^2.1.1",
     "@nestjs/swagger": "^4.6.1",
-    "axios": "^0.19.2",
+    "axios": "^0.21.1",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "cookie-parser": "^1.4.5",
